# Automatic-Planning

./: README.md  output.sas
Documents/: References  map.drawio  open_street_map.json
prob1/: domain1.pddl  problem1.pddl  problem1.pddl.plan
prob1/b_implementation/: domain1.pddl  domain1_manu_old.pddl  problem1.pddl
prob2/: domain2.pddl  problem2.pddl
prob2/drone/: domain2drone.pddl  problem2drone.pddl  problem2drone.pddl.plan  problem2droneV2.pddl  problem2droneV2.pddl.plan
prob2/implementation_b/: domain2.pddl  problem2.pddl  problem2.pddl.plan
prob3/: PROB3.plan  basicprob.hddl  dom3.hddl  domChia.hddl  domainCapacity.hddl  domainProbCapacity.hddl  domain_manu.hddl  domain_manu2.hddl  dominio3.hddl  healthcare-htn.hddl  healthcare-problem.hddl  output.pddl  output.txt  p3.hddl  probChia.hddl  problem_manu.hddl  problem_manu2.hddl  problema3.hddl
prob3/complex_implementation/: complex_domain.hddl  complex_problem.hddl
prob4/: domain4temporal.pddl  domain4temporalnew.pddl  problem4temporal.pddl
prob4/clean_experiment/: domain.pddl  problem.pddl
prob5/: DockerFile  README.md  comandi_utili.txt  plansys2commands.md
prob5/pddl_files/: output.txt  problem4_in_plansys_commands  problem4temporal.pddl
prob5/plansys2_assigment/src/plansys_pddl/: CMakeLists.txt  package.xml
prob5/plansys2_assigment/src/plansys_pddl/launch/: healthcare_plansys_launch.py
prob5/plansys2_assigment/src/plansys_pddl/pddl/: domain4temporalnew.pddl  domainsimplified.pddl  problem_commands  problem_simplified.pddl
prob5/plansys2_assigment/src/plansys_pddl/src/: DeliverPatient.cpp  LoadToDroneCarrier.cpp  LoadToRobotCarrierInventory.cpp  MoveBetweenLocationAccompanyRobot.cpp  MoveBetweenLocationDeliveryRobot.cpp  MoveDrone.cpp  MoveInInventoryDeliveryRobot.cpp  MoveInMedUnitAccompanyRobot.cpp  MoveInMedUnitDeliveryRobot.cpp  MoveOutInventoryDeliveryRobot.cpp  MoveOutMedUnitAccompanyRobot.cpp  MoveOutMedUnitDeliveryRobot.cpp  TakePatient.cpp  UnloadContent.cpp  UnloadFromDroneCarrier.cpp  UnloadFromRobotCarrierInventory.cpp  UnloadFromRobotCarrierMedicalUnit.cpp  deliver_patient_node.cpp  load_to_drone_carrier_node.cpp  load_to_robot_carrier_node.cpp  move_drone_node.cpp  take_patient_node.cpp  unload_content_node.cpp  unload_from_drone_carrier_node.cpp
